styling: Correct styling for readability

--- a/client/app/components/Input/Input.scss
+++ b/client/app/components/Input/Input.scss
@@ -215,6 +215,11 @@
   }
 }
 
+.resources {
+  color: #FFFFFF;
+  text-transform: capitalize;
+}
+
 .hidden {
   display: none;
 }
